# DocuGab

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_customers_projects.py  0003_add_uuids.py  0004_add_faq_uuid.py  0005_add_user_settings.py  0006_add_customer_id_to_users.py  1bcd3f5f1a63_add_auth_tables.py  3115bdaf456a_update_vector_dimension_768.py  814948d57862_add_uuid_to_documents.py  886435245bc0_add_error_message_to_documents.py  9a5def593c9a_add_email_to_customers.py  a7a7f3d2c0a4_initial_schema.py  add_avatars_001_add_avatars_table.py  b2c9d4e5f6a7_add_faq_table.py  c3d4e5f6a7b8_add_chat_messages_table.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  avatars.py  (+10 more)
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/middleware/: __init__.py  subdomain.py
backend/app/models/: __init__.py  avatar.py  chat_message.py  chunk.py  customer.py  document.py  faq.py  project.py  session.py  user.py
backend/app/schemas/: __init__.py  auth.py  avatar.py  customer.py  project.py
backend/app/services/: auth.py  chat.py  chunking.py  embedding.py  extraction.py  processor.py  retrieval.py  speech.py  storage.py
backend/scripts/: create_superadmin.py  hash_password.py  reset_password.py  verify_password.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_customers.py  test_documents.py  test_health.py  test_projects.py  test_rag.py
(+117 files in other folders)
